@@ -57,6 +57,7 @@
   *  - Fixed SET FEATURE and CLEAR FEATURE control requests directed at an unconfigured endpoint causing request timeouts
   *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
   *  - Fixed USB_Host_ClearPipeStall() incorrectly determining the endpoint direction from the currently selected pipe
+  *  - Fixed JTAG_DEBUG_POINT() and JTAG_DEBUG_BREAK() macros not compiling under pure C99 standards mode
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
